[project]
name = "reflectagentdemo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
]
